--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "15.1.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
