--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "sass": "^1.83.4",
     "yup": "^1.6.1",
     "zxcvbn": "^4.4.2"
