--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
