--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
@@ -19,15 +21,18 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "sass": "^1.83.4",
     "yup": "^1.6.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "@types/zxcvbn": "^4.4.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
