--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "add": "^2.0.6",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "sass": "^1.83.4",
+    "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
     "yup": "^1.6.1",
     "zxcvbn": "^4.4.2"
   },
