--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "add": "^2.0.6",
     "axios": "^1.7.9",
@@ -17,6 +18,7 @@
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
