--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@headlessui/react": "^2.2.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.10.0",
+    "@nivo/bar": "^0.93.0",
+    "@nivo/core": "^0.93.0",
+    "@nivo/pie": "^0.93.0",
     "add": "^2.0.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
